# synth-artifact2

./: -- SQLite.sql  .gitignore  300.py  Dockerfile  README  README.md  app3.dot  benchmark_multiple.py  benchmark_multiple_dot.py  benchmark_single.py  benchmark_single_dot.py  benchmark_truncation.py  benchmark_truncation_dot.py  brepair  brepair.cpp  brepair2  brepair2.cpp  data_fetch.py  erepair  fetch_json_data.py  filetatistic.py  filtter.py  google-sheet-ids.json  ini_fetch.py  js_mutate.sqlite  keep.py  lisp_mutate.sqlite  match.py  mergedata.py  mined_input_files.csv  mul-dot.sqlite  mul-ini.sqlite  mul-js.sqlite  mul-lisp.sqlite  mul-xml.sqlite  mutation_double.py  mutation_gen.py  mutation_gen2.py  mutation_gen3.py  mutation_single.py  (+28 more)
dot/: CMakeLists.txt  DOTParser.h  main.cpp
dot_data/: 0163_linux-docs-6.12.19.dot  0175_python-dependencies.dot  0354_uml.dot
generated_files/: result2.db
ini_data/: 039_comskip.tmp_mut_double  113_debug.ini  115_shiro.tmp_mut_double  123_DefaultInput.tmp_mut_double  136_mod_db8404errors.tmp_mut_double  144_34904.tmp_mut_double  145_32376.tmp_mut_double  159_1532037.tmp_mut_double  185_en-GB.mod_languages.tmp_mut_double  192_hylaeus_volcanicus_gcf026283585v1rs.ini  193_doryrhamphus_excisus_gca037039965v1.ini  243_TaskDurations.tmp_mut_double  268_37752.tmp_mut_double  269_37194.tmp_mut_double  275_1102482.tmp_mut_double  285_1412061.tmp_mut_double  286_1462208.tmp_mut_double  294_no-opt-in-allows.https.html.tmp_mut_double  310_balaenoptera_ricei_gca028023285v1.ini  350_scroll-to-text-fragment.html.tmp_mut_double  356_wfs.tmp_mut_double  393_34651.tmp_mut_double  394_37061.tmp_mut_double  395_36244.tmp_mut_double  396_30957.tmp_mut_double  414_info.ini  433_caradrina_kadenii_gca947462355v1.ini  448_dev_requirements.tmp_mut_double
js_data/: 0021_nummath.js  0024_09_Maths.js  0034_edge.js  0035_mod.js  0037_day117.js  0053_esreveR.js  0095_rest-api-andhttp-requests.js  0098_elm-pkg-js-includes.js  0119_person.js  0133_datatypes-summary.js  0134_Lottery_part1.js  0135_index.vr_part8.js  0137_payment_part15.js  0138_payment_part23.js  0139_restlet_part3.js  0140_cxmsg_part3.js  0145_plug.upnp_contentdirectory_part1.js  0147_LoadScenarioAgent_part8.js  0148_real-data_part3.js  0149_snanstdevtk_part1.js  0150_snanstdevtk_part6.js  0151_trumbowyg.fontfamily_part2.js  0152_vue.config_part2.js  0153_index_part3.js  0154_App_part1.js  0155_hi_part5.js  0156_battery90-rounded_part3.js  0158_index_part1.js  0175_app_part1.js  (+27 more)
project/erepair-subjects/dot/: CMakeLists.txt  DOTBaseListener.cpp  DOTBaseListener.h  DOTParser.cpp  google-sheet-ids.json  test3.dot
(+21197 files in other folders)
